--- a/features/fixtures/cucumber_tags/datasets_search_cwic_atom.yml
+++ b/features/fixtures/cucumber_tags/datasets_search_cwic_atom.yml
@@ -45,7 +45,7 @@ http_interactions:
             xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
             xmlns:georss="http://www.georss.org/georss/10"
             xmlns="http://www.w3.org/2005/Atom"
-            xmlns:dc="http://purl.org/dc/terms/"
+            xmlns:dc="http://purl.org/dc/elements/"
             xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
             xmlns:esipdiscovery="http://commons.esipfed.org/ns/discovery/1.2/"
             xmlns:gml="http://www.opengis.net/gml" esipdiscovery:version="1.2"
@@ -409,6 +409,6 @@ http_interactions:
                 <echo:hasGranules>false</echo:hasGranules>
             </entry>
         </feed>
-    http_version: 
+    http_version:
   recorded_at: Fri, 05 Feb 2016 20:03:06 GMT
 recorded_with: VCR 2.9.2
