--- a/features/fixtures/cucumber_tags/granules_search_validation_atom.yml
+++ b/features/fixtures/cucumber_tags/granules_search_validation_atom.yml
@@ -48,7 +48,7 @@ http_interactions:
       encoding: ASCII-8BIT
       string: <?xml version="1.0" encoding="UTF-8"?><feed xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
         xmlns:georss="http://www.georss.org/georss/10" xmlns="http://www.w3.org/2005/Atom"
-        xmlns:dc="http://purl.org/dc/terms/" xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
+        xmlns:dc="http://purl.org/dc/elements/" xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
         xmlns:esipdiscovery="http://commons.esipfed.org/ns/discovery/1.2/" xmlns:gml="http://www.opengis.net/gml"
         esipdiscovery:version="1.2" xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/"><updated>2018-02-05T22:10:11.202Z</updated><id>https://cmr.earthdata.nasa.gov:443/search/granules.atom?page_num=1&amp;page_size=10</id><title
         type="text">CMR granule metadata</title><entry><id>G1001055217-ASF</id><title
@@ -122,6 +122,6 @@ http_interactions:
         href="https://vertex.daac.asf.alaska.edu/"><echo:inherited></echo:inherited></link><echo:orbitCalSpatialDomain
         orbitNumber="107"></echo:orbitCalSpatialDomain><echo:coordinateSystem>GEODETIC</echo:coordinateSystem><georss:polygon>21.2371
         -112.5157 21.6616 -111.5191 22.5184 -111.8877 22.0926 -112.8916 21.2371 -112.5157</georss:polygon><echo:onlineAccessFlag>true</echo:onlineAccessFlag><echo:browseFlag>true</echo:browseFlag><echo:dayNightFlag>UNSPECIFIED</echo:dayNightFlag></entry></feed>
-    http_version: 
+    http_version:
   recorded_at: Mon, 05 Feb 2018 22:10:11 GMT
 recorded_with: VCR 2.9.2
